<resources>
    <string name="app_name">AL-sama</string>
    <string name="powered_by_anilist">Powered by AniList</string>
    <string name="get_started">Get Started</string>
    <string name="back">Back</string>
    <string name="welcome_to_al_chan">Welcome to AL-sama</string>
    <string name="al_chan_is_an_unofficial_client_for_anilist_a_place_where_you_can_track_share_discover_and_experience_anime_u0026_manga"><![CDATA[AL-sama is an unofficial client for AniList, a place where you can track, share, discover, and experience Anime & Manga.]]></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="important_to_know">Important to Know</string>
    <string name="you_ll_be_redirected_to_anilist_co_to_login_register_make_sure_the_url_is_anilist_co_before_entering_your_email_and_password">You’ll be redirected to anilist.co to login/register. Make sure the URL is anilist.co before entering your email and password.</string>
    <string name="please_wait">Please Wait</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="mod_settings">Mod Settings</string>
    <string name="share_profile">Share Profile</string>
    <string name="bio">Bio</string>
    <string name="reviews">Reviews</string>
    <string name="stats">Stats</string>
    <string name="favorites">Favorites</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="app_settings">App Settings</string>
    <string name="personalise_al_chan_to_suit_your_taste">Personalise AL-sama to suit your taste</string>
    <string name="anilist_settings">AniList Settings</string>
    <string name="modify_anilist_settings">Modify AniList settings</string>
    <string name="list_settings">List Settings</string>
    <string name="configure_your_lists">Configure your lists</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_al_chan">About AL-sama</string>
    <string name="know_more_about_al_chan">Know more about AL-sama</string>
    <string name="manage_your_account">Manage your account</string>
    <string name="theme">Theme</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="negative">Negative</string>
    <string name="show_currently_watching_at_home_menu">Show currently watching at Home menu</string>
    <string name="show_currently_reading_at_home_menu">Show currently reading at Home menu</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="send_airing_push_notifications">Send Airing push notifications</string>
    <string name="send_activity_push_notifications">Send Activity push notifications</string>
    <string name="send_forum_push_notifications">Send Forum push notifications</string>
    <string name="send_follows_push_notifications">Send Follows push notifications</string>
    <string name="save">Save</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="this_will_reset_your_app_settings_to_default_configuration">This will reset your App Settings to default configuration.</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="settings_saved">Settings saved.</string>
    <string name="save_settings">Save Settings</string>
    <string name="clipboard_explanation">To remove a custom clipboard, simply empty the corresponding box and then save the configuration</string>
    <string name="are_you_sure_you_want_to_save_this_configuration">Are you sure you want to save this configuration?</string>
    <string name="these_push_notifications_will_only_work_if_the_notifications_settings_in_anilist_settings_are_also_enabled">These push notifications will only work if the Notifications settings in AniList Settings are also enabled.</string>
    <string name="change">Change</string>
    <string name="title_language">Title Language</string>
    <string name="_18_content">18+ Content</string>
    <string name="show_18_content_because_i_m_a_responsible_adult">Show 18+ content because I\'m a responsible adult</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="set_how_you_want_to_be_notified">Set how you want to be notified</string>
    <string name="scoring">Scoring</string>
    <string name="scoring_system">Scoring system</string>
    <string name="advanced_scoring_criteria">Advanced Scoring Criteria</string>
    <string name="add_more">Add more</string>
    <string name="list">List</string>
    <string name="default_list_order">Default list order</string>
    <string name="use_advanced_scoring">Use advanced scoring</string>
    <string name="split_anime_completed_list_section_by_format">Split Anime completed list section by format</string>
    <string name="split_manga_completed_list_section_by_format">Split Manga completed list section by format</string>
    <string name="custom_anime_lists">Custom Anime Lists</string>
    <string name="custom_manga_lists">Custom Manga Lists</string>
    <string name="add">Add</string>
    <string name="add_new_list">Add New List</string>
    <string name="add_new_criteria">Add New Criteria</string>
    <string name="no_item">No Item</string>
    <string name="edit">Edit</string>
    <string name="edit_list">Edit List</string>
    <string name="edit_criteria">Edit Criteria</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="currently_watching">Currently Watching</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="anime_list">Anime List</string>
    <string name="search">Search</string>
    <string name="customise_list">Customise List</string>
    <string name="filter">Filter</string>
    <string name="move_to_watching">Move to Watching</string>
    <string name="do_you_want_to_set_this_entry_into_watching">Do you want to set this entry into Watching?</string>
    <string name="move">Move</string>
    <string name="stay">Stay</string>
    <string name="move_to_completed">Move to Completed</string>
    <string name="do_you_want_to_set_this_entry_into_completed">Do you want to set this entry into Completed?</string>
    <string name="automatically_set_start_date_when_moving_from_planning_to_watching_reading">Automatically set Start Date when moving from Planning to Watching/Reading</string>
    <string name="automatically_set_finish_date_when_moving_to_completed">Automatically set Finish Date when moving to Completed</string>
    <string name="set_progress">Set Progress</string>
    <string name="set">Set</string>
    <string name="advanced_scoring">Advanced Scoring</string>
    <string name="set_score">Set Score</string>
    <string name="sort">Sort</string>
    <string name="filters">Filters</string>
    <string name="format">Format</string>
    <string name="year">Year</string>
    <string name="season">Season</string>
    <string name="country">Country</string>
    <string name="status">Status</string>
    <string name="source">Source</string>
    <string name="genres">Genres</string>
    <string name="tags">Tags</string>
    <string name="hide_anime_on_my_list">Hide Anime on my list</string>
    <string name="only_show_anime_on_my_list">Only show Anime on my list</string>
    <string name="apply">Apply</string>
    <string name="general">General</string>
    <string name="score">Score</string>
    <string name="progress">Progress</string>
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="total_rewatches">Total Rewatches</string>
    <string name="notes">Notes</string>
    <string name="custom_lists">Custom Lists</string>
    <string name="others">Others</string>
    <string name="hide_from_status_lists">Hide from status lists</string>
    <string name="private_">Private</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="anime_list_editor">Anime List Editor</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_remove_this_entry_from_your_list">Are you sure you want to remove this entry from your list?</string>
    <string name="open_media_page">Open Media Page</string>
    <string name="open">Open</string>
    <string name="change_saved">Change saved.</string>
    <string name="entry_deleted">Entry deleted.</string>
    <string name="list_type">List Type</string>
    <string name="customise_anime_list">Customise Anime List</string>
    <string name="customise_manga_list">Customise Manga List</string>
    <string name="increment">Increment</string>
    <string name="primary_color">Primary Color</string>
    <string name="secondary_color">Secondary Color</string>
    <string name="text_color">Text Color</string>
    <string name="card_color">Card Color</string>
    <string name="toolbar_color">Toolbar Color</string>
    <string name="background_color">Background Color</string>
    <string name="background_image">Background Image</string>
    <string name="add_image">Add Image</string>
    <string name="no_image_selected">No image selected</string>
    <string name="this_will_reset_your_anime_list_style_to_default_style">This will reset your Anime List style to default style.</string>
    <string name="storage_permission_is_required_to_pick_and_save_image">Storage permission is required to pick and save image.</string>
    <string name="remove_image">Remove Image</string>
    <string name="remove">Remove</string>
    <string name="stop_using_this_image_for_your_list">Stop using this image for your list?</string>
    <string name="manga_list">Manga List</string>
    <string name="chapter">Chapter</string>
    <string name="volume">Volume</string>
    <string name="manga_list_editor">Manga List Editor</string>
    <string name="episode">Episode</string>
    <string name="overview">Overview</string>
    <string name="add_to_list">ADD TO LIST</string>
    <string name="synopsis">Synopsis</string>
    <string name="info">Info</string>
    <string name="romaji">Romaji</string>
    <string name="english">English</string>
    <string name="activity_subscriptions">Activity Subscriptions</string>
    <string name="automatically_subscribe_me_to_activity_i_create">Automatically subscribe me to activity I create</string>
    <string name="automatically_subscribe_me_to_activity_i_reply_to">Automatically subscribe me to activity I reply to</string>
    <string name="when_someone_follows_me">When someone follows me</string>
    <string name="when_i_receive_message">When I receive message</string>
    <string name="when_i_am_mentioned_in_an_activity_or_activity_reply">When I am @ mentioned in an activity or activity reply</string>
    <string name="when_someone_likes_my_activity">When someone likes my activity</string>
    <string name="when_someone_likes_my_activity_reply">When someone likes my activity reply</string>
    <string name="when_someone_replies_to_my_forum_comment">When someone replies to my forum comment</string>
    <string name="when_i_am_mentioned_in_a_forum_comment">When I am @ mentioned in a forum comment</string>
    <string name="when_someone_likes_my_forum_comment">When someone likes my forum comment</string>
    <string name="when_someone_replies_to_a_forum_thread_i_m_subscribed_to">When someone replies to a forum thread I\'m subscribed to</string>
    <string name="when_someone_likes_my_forum_thread">When someone likes my forum thread</string>
    <string name="post">Post</string>
</resources>