<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.notifications.NotificationsSettingsFragment">

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/notificationsSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/marginPage">

            <com.google.android.material.textview.MaterialTextView
                style="?themeRegularBoldFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_subscriptions" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/automatically_subscribe_me_to_activity_i_create" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/fetchFromMalCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/automatically_subscribe_me_to_activity_i_reply_to" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/activityReplySubscribedCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                style="?themeRegularBoldFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginPage"
                android:text="@string/notifications" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_follows_me" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/followingCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_i_receive_message" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/activityMessageCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_i_am_mentioned_in_an_activity_or_activity_reply" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/activityMentionCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_likes_my_activity" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/activityLikeCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_likes_my_activity_reply" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/activityReplyLikeCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_replies_to_my_forum_comment" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/threadCommentReplyCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_i_am_mentioned_in_a_forum_comment" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/threadCommentMentionCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_likes_my_forum_comment" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/threadCommentLikeCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_replies_to_a_forum_thread_i_m_subscribed_to" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/threadSubscribedCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?themeRegularFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:layout_weight="1"
                    android:text="@string/when_someone_likes_my_forum_thread" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/threadLikeCheckBox"
                    style="?themeRegularCheckBox"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <include layout="@layout/layout_loading"/>

</RelativeLayout>