<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-1dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settingsMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/appSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/marginPage">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/postTtitle"
                    style="?themeRegularBoldFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginFar"
                    android:text="@string/post" />

                <LinearLayout
                    android:id="@+id/addClipboard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="Custom clipboard" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addButton"
                        style="?themeButtonBorderNegative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    style="?themeButtonBorderNegative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginFar"
                    android:text="@string/save" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <include layout="@layout/layout_toolbar" />

</RelativeLayout>